--- a/Rover/Views/Rover/Index.cshtml
+++ b/Rover/Views/Rover/Index.cshtml
@@ -43,7 +43,7 @@
                         </div>
 
                         <div class="p-2 mt-4">
-                            <form asp-controller="Rover" asp-action="Index" method="post">
+                            <form asp-controller="Home" asp-action="Index" method="post">
                                 <div class="mb-3">
                                     <label class="form-label">Instructions</label>
                                     <textarea class="form-control" id="instruction" name="instruction" rows="8" required></textarea>
