--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="text-center mt-sm-5 mb-4 text-white-50">
                     <div>
                         <a href="index.html" class="d-inline-block auth-logo">
-                            <img src="~/assets/Thrive+logo.png" alt="" height="60">
+                            <img src="~/images/Thrive+logo.png" alt="" height="60">
                         </a>
                     </div>
                     <p class="mt-3 fs-15 fw-medium">Mars Rover</p>
@@ -54,35 +54,36 @@
                             </form><!-- end form -->
 
                         </div>
+                        <div class="container">
+                            @if (ViewBag.RoverResponses != null)
+                            {
+                                <h2>Results:</h2>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Rover</th>
+                                            <th scope="col">Final Position</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @for (int i = 0; i < ViewBag.RoverResponses.Count; i++)
+                                        {
+                                            <tr>
+                                                <th scope="row">@i</th>
+                                                <td>@ViewBag.RoverResponses[i]</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                        </div>
                     </div>
                     <!-- end card body -->
                 </div>
 
                 <!-- end card -->
 
-                <div class="container">
-                    @if (ViewBag.RoverResponses != null)
-                    {
-                        <h2>Results:</h2>
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Rover</th>
-                                    <th scope="col">Final Position</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (int i = 0; i < ViewBag.RoverResponses.Count; i++)
-                                {
-                                    <tr>
-                                        <th scope="row">@i</th>
-                                        <td>@ViewBag.RoverResponses[i]</td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    }
-                </div>
+                
 
 
                 <div class="mt-4 text-center">
