--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 @*@using Rover.Models
 @model Plateau*@
 
+@model System.Exception
+
 <div class="auth-one-bg-position auth-one-bg" id="auth-particles">
     <div class="bg-overlay"></div>
 
@@ -43,15 +45,24 @@
                         </div>
 
                         <div class="p-2 mt-4">
+
+                            <!-- Start Form -->
                             <form asp-controller="Home" asp-action="Index" method="post">
                                 <div class="mb-3">
                                     <label class="form-label">Instructions</label>
-                                    <textarea class="form-control" id="instruction" name="instruction" rows="8" required></textarea>
+                                    <textarea class="form-control" id="instruction" name="instruction" rows="8" placeholder="5 5
+1 2 N
+LMLMLMLMM
+3 3 E
+MMRMMRMRRM" required></textarea>
                                 </div>
                                 <div class="mb-2 mt-4">
                                     <button class="btn btn-success w-100" type="submit">Explore</button>
                                 </div>
-                            </form><!-- end form -->
+                            </form>
+                            <!-- end form -->
+
+                            <p style="color:red">@ViewBag.ErrorMessage</p>
 
                         </div>
                         <div class="container">
