Logo link breaking on Home index view fixed

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
             <div class="col-lg-12">
                 <div class="text-center mt-sm-5 mb-4 text-white-50">
                     <div>
-                        <a href="index.html" class="d-inline-block auth-logo">
+                        <a href="https://thrive.trade"  target="_blank" class="d-inline-block auth-logo">
                             <img src="~/images/Thrive+logo.png" alt="" height="60">
                         </a>
                     </div>
